# c-simple-shell

./: CMakeLists.txt  README.md
include/: shell.h
src/: builtin.c  history.c  main.c  parser.c
